# upbox

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  PLAN.md  README.md  pyproject.toml
.claude/: settings.json
.claude/rules/: code-quality.md  error-handling.md  security.md
.github/workflows/: ci.yml  release.yml
LICENSES/: THIRD-PARTY.md
docs/: ai-act-mapping.md  configuring-tools.md  faq.md  installing-ca.md  redaction-rules.md  release-checklist.md
launch/: hn.md  reddit.md  x-thread.md
tests/: conftest.py  test_ca.py  test_ca_windows.py  test_capture.py  test_cli.py  test_dashboard.py  test_enforce.py  test_export_cli.py  test_fingerprint.py  test_launchers.py  test_redact.py  test_settings.py  test_store.py  test_supervisor.py  test_supervisor_recovery.py
upbox/: __init__.py  __main__.py  ca.py  cli.py  launchers.py  proxy.py  settings.py  supervisor.py
upbox/addons/: __init__.py  _hostname.py  capture.py  enforce.py  fingerprint.py  redact.py
upbox/dashboard/: __init__.py  app.py  icons.py
upbox/dashboard/static/: dashboard.css  dashboard.js
upbox/dashboard/templates/: base.html  index.html  settings.html
upbox/dashboard/templates/partials/: feed.html  filter_bar.html  recent.html  request_detail.html  sidebar.html  stats_bar.html
upbox/dashboard/templates/partials/tabs/: allowlist.html  body.html  export.html  headers.html  redactions.html
upbox/db/: __init__.py  schema.sql  store.py
upbox/rules/: __init__.py  allowlist.yaml  redact.yaml  tools.yaml
