[project]
name = "upbox"
version = "0.0.1"
description = "See, audit, and control what your AI tools send to the cloud."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Krishna Mallam" }]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Networking :: Monitoring",
]
dependencies = [
    "mitmproxy>=11.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "typer>=0.13",
    "pyyaml>=6.0",
    "jinja2>=3.1",
]

[project.scripts]
upbox = "upbox.cli:app"

[project.urls]
Homepage = "https://github.com/krishnamallam/upbox"
Repository = "https://github.com/krishnamallam/upbox"
Issues = "https://github.com/krishnamallam/upbox/issues"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
    "types-pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["upbox"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
    "RUF", # ruff-specific
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unreachable = true
files = ["upbox"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
